--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,11 @@ services:
       - "3003:3003"
     environment:
       - ORDER_PORT=3003
+
+frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    # environment:
+    #   - REACT_APP_API_URL=http://your-api-url-here
+    # You can add environment vars for your React app if needed
